Refactor to Rejuvenate Fix bug with clearing the rejuvenating entries

--- a/poller/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/poller/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model poller.Models.ExternalLoginConfirmationViewModel
+﻿@model RejuvenatingExample.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
