--- a/poller/Views/Account/ResetPassword.cshtml
+++ b/poller/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model poller.Models.ResetPasswordViewModel
+﻿@model RejuvenatingExample.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
