--- a/poller/Views/Account/VerifyCode.cshtml
+++ b/poller/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model poller.Models.VerifyCodeViewModel
+﻿@model RejuvenatingExample.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
