--- a/poller/Views/Manage/AddPhoneNumber.cshtml
+++ b/poller/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model poller.Models.AddPhoneNumberViewModel
+﻿@model RejuvenatingExample.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
