--- a/poller/Views/Manage/ChangePassword.cshtml
+++ b/poller/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model poller.Models.ChangePasswordViewModel
+﻿@model RejuvenatingExample.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
