--- a/poller/Views/Manage/SetPassword.cshtml
+++ b/poller/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model poller.Models.SetPasswordViewModel
+﻿@model RejuvenatingExample.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
