--- a/poller/Views/Account/ForgotPassword.cshtml
+++ b/poller/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model poller.Models.ForgotPasswordViewModel
+﻿@model RejuvenatingExample.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
