--- a/poller/Views/Account/Register.cshtml
+++ b/poller/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model poller.Models.RegisterViewModel
+﻿@model RejuvenatingExample.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
