--- a/poller/Views/Manage/ManageLogins.cshtml
+++ b/poller/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model poller.Models.ManageLoginsViewModel
+﻿@model RejuvenatingExample.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
