--- a/poller/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/poller/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model poller.Models.VerifyPhoneNumberViewModel
+﻿@model RejuvenatingExample.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
