fix name references

--- a/RejuvenateExample/Views/Home/Index.cshtml
+++ b/RejuvenateExample/Views/Home/Index.cshtml
@@ -2,10 +2,10 @@
 @model IEnumerable<Item>
 
 @{
-    ViewBag.Title = "Awareness";
+    ViewBag.Title = "Homepage";
 }
 
-<h2>Awareness</h2>
+<h2>Homepage</h2>
 
 <div id="items">
     @foreach (var item in Model)
