--- a/RejuvenateExample/Views/Game/Index.cshtml
+++ b/RejuvenateExample/Views/Game/Index.cshtml
@@ -62,9 +62,8 @@
             // Declare a proxy to reference the hub.
             myHub = $.connection.exampleHub;
 
-            myHub.client.itemsAdded = function (type, rejuvenatorId, items)
+            myHub.client.itemsAdded = function (type, publisherId, items)
             {
-                //alert('add');
                 items.forEach(function (item, index)
                 {
                     var scope = angular.element(document.getElementById('body')).scope();
@@ -73,7 +72,7 @@
                 });
             }
 
-            myHub.client.itemsRemoved = function (type, rejuvenatorId, items) {
+            myHub.client.itemsRemoved = function (type, publisherId, items) {
 
                 items.forEach(function (item, index)
                 {
@@ -85,7 +84,7 @@
                 });
             }
 
-            myHub.client.itemsUpdated = function (type, rejuvenatorId, items) {
+            myHub.client.itemsUpdated = function (type, publisherId, items) {
                 items.forEach(function (item, index)
                 {
                     var scope = angular.element(document.getElementById('body')).scope();
@@ -98,7 +97,7 @@
             // Start the connection.
             $.connection.hub.start().done(function () {
                 // todo make this safe and use a token so it cant be meddled with
-                myHub.server.registerRejuvenatingClient([@ViewBag.rejuvenatorId]);
+                myHub.server.subscribe([@ViewBag.PublisherId]);
                 myHub.server.setUser("@ViewBag.UserEmail");
             });
         });
