voorbeeld simpeler maken

--- a/ChangePublishingDbContextExample/Views/Game/Index.cshtml
+++ b/ChangePublishingDbContextExample/Views/Game/Index.cshtml
@@ -39,7 +39,7 @@
 
             var itemsAdded = function (items)
             {
-                alert('');
+                alert('add');
                 /*items.forEach(function (item, index)
                 {
                     var scope = angular.element(document.getElementById('body')).scope();
@@ -49,6 +49,7 @@
             };
 
             var itemsRemoved = function (items) {
+                alert('remove');
 
                 /*items.forEach(function (item, index)
                 {
